--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -86,7 +86,7 @@ jobs:
       - name: unitypackage_util-windows-x86_64
         uses: actions/download-artifact@v4
         with:
-          name: unitypackage_util-windows-x86_64
+          name: unitypackage_util-windows-x86_64.exe
           path: /*
 
   build-linux:
