--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -87,7 +87,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: unitypackage_util-windows-x86_64.exe
-          path: /*
+          path: unitypackage_util-windows-x86_64
 
   build-linux:
     runs-on: ubuntu-20.04
