--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,7 +72,7 @@ jobs:
           mkdir $TARGET
           cp LICENSE $TARGET/unitypackage_util-License.txt
           cp target/release/unitypackage_util.exe $TARGET/unitypackage_util-windows-x86_64.exe
-          7z a -r $TARGET.zip $TARGET
+          # 7z a -r $TARGET.zip $TARGET
         shell: bash
 
       # - name: Release
@@ -86,8 +86,8 @@ jobs:
       - name: unitypackage_util-windows-x86_64
         uses: actions/download-artifact@v4
         with:
-          name: unitypackage_util-windows-x86_64.exe
-          path: unitypackage_util-windows-x86_64
+          name: unitypackage_util.exe
+          path: unitypackage_util-windows-x86_64/release/
 
   build-linux:
     runs-on: ubuntu-20.04
