--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -86,8 +86,8 @@ jobs:
       - name: unitypackage_util-windows-x86_64
         uses: actions/download-artifact@v4
         with:
-          name: unitypackage_util.exe
-          path: target/release/
+          name: unitypackage_util-windows-x86_64.exe
+          path: /unitypackage_util-windows-x86_64/
 
   build-linux:
     runs-on: ubuntu-20.04
