--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,19 +75,19 @@ jobs:
           # 7z a -r $TARGET.zip $TARGET
         shell: bash
 
-      # - name: Release
-      #   uses: actions/download-artifact@v4
-      #   if: startsWith(github.ref, 'refs/tags/')
-      #   with:
-      #     files: |
-      #       unitypackage_util-windows-x86_64.zip
-            # unitypackage_util-windows-x86_64/unitypackage_util-License.txt
+      - name: Release
+        uses: actions/upload-artifact@v4
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            unitypackage_util-windows-x86_64.zip
+            unitypackage_util-windows-x86_64/unitypackage_util-License.txt
 
       - name: unitypackage_util-windows-x86_64
         uses: actions/download-artifact@v4
         with:
-          name: unitypackage_util-windows-x86_64.exe
-          path: /unitypackage_util-windows-x86_64/
+          name: unitypackage_util-windows-x86_64.zip
+          path: 
 
   build-linux:
     runs-on: ubuntu-20.04
