--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: unitypackage_util-windows-x86_64
         uses: actions/download-artifact@v4
-        with:
+        # with:
           # name: unitypackage_util-windows-x86_64.zip
           # path: 
 
