--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -84,7 +84,7 @@ jobs:
             unitypackage_util-windows-x86_64/unitypackage_util-License.txt
 
       - name: unitypackage_util-windows-x86_64
-        uses: actions/download-artifact@v4
+        uses: actions/upload-artifact@v4
         # with:
           # name: unitypackage_util-windows-x86_64.zip
           # path: 
