--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,8 +85,8 @@ jobs:
 
       - name: unitypackage_util-windows-x86_64
         uses: actions/upload-artifact@v4
-        # with:
-          # name: unitypackage_util-windows-x86_64.zip
+        with:
+          name: unitypackage_util-windows-x86_64.zip
           # path: 
 
   # build-linux:
