--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -87,7 +87,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: unitypackage_util-windows-x86_64.zip
-          # path: 
+          path: D:/a/unitypackage_util/unitypackage_util/unitypackage_util-windows-x86_64
 
   # build-linux:
   #   runs-on: ubuntu-20.04
